# spell-checker

./: .gitignore  CMakeLists.txt  README.md  SpellChecker.cpp  SpellChecker.h  TextSpellChecker.cpp  TextSpellChecker.h  Trie.cpp  Trie.h  WordSpellChecker.cpp  WordSpellChecker.h  spell-checker.cpp  spell-checker.sln  spell-checker.vcxproj  spell-checker.vcxproj.filters
data/: 50k_most_freq_words.txt  readme.md
test/: CMakeLists.txt  SpellCheckerTest.cpp  TrieTest.cpp  run_tests.bat  test.vcxproj  test.vcxproj.filters
test/data/: 01_assingment.out.txt  02_2_consecutive_edits.in.txt  02_2_consecutive_edits.out.txt  03_empty_text_in.txt  03_long_word.in.txt  03_long_word.out.txt  04_empty.in.txt  04_empty_dict_out.txt  05_empty_dict.in.txt  07_long_text.in.txt  07_long_text.out.txt
